# research-drive-private

./: .gitignore  CLAUDE.md  REPO_LAYOUT.md  __branch_setup_placeholder__.txt  main.py  package.json  playwright.config.js  pyproject.toml  vite.config.js
config/: procurement_magic.json  tickers_international_growth.txt  yzu_cluster.json
docs/: CHATGPT_VISUAL_REVIEW.md  DISCOVER_E2E_AUTHORITY_AUDIT.md  FROZEN_PAGE_CHANGE_LOCK_2026-07-16.md  REPOSITORY_TOPOLOGY.md  RESEARCH_INTEGRITY.md  UI_IMPLEMENTATION_PROGRAM.md  UI_PRODUCT_AUTHORITY.md  UX_CONVERGENCE_SNAPSHOT_2026-07-16.md
drive/: README.md  vite.deskProxy.js  vite.deskProxy.test.js
e2e/: beta-workflow.spec.js  compare-prototype.spec.js  compare-react-reference.spec.js  decoration-layer.spec.js  desk-parity.spec.js  desk-tour.spec.js  desk.spec.js  discover-composition-screenshots.spec.js  discover-d0-screenshots.spec.js  discover-evaluation-screenshots.spec.js  discover-lifecycle-screenshots.spec.js  interaction-robustness.spec.js  library-estate-screenshots.spec.js  procurement-golden-path.spec.js  professor-demo.spec.js  release-visual-convergence.spec.js  screenshots.spec.js  source-first.spec.js  sourcing-flow.spec.js  ui-contract.spec.js  ux-audit.spec.js  v2-account-nav.spec.js  v2-cluster.spec.js  v2-discover-loop.spec.js  v2-discover.spec.js  v2-home.spec.js  v2-library.spec.js  v2-parity.spec.js  v2-preview.spec.js  v2-profile-freeze.spec.js  v2-resources.spec.js  v2-settings-binding.spec.js  v2-synthesis.spec.js  visual-design.spec.js
scripts/: alpha_daily_scorecard.py  alpha_live_cycle.py  (+6 more)
(+290 files in other folders)
